--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -59,6 +59,10 @@
   }
 }
 
+.hex4 {
+  clip-path: polygon(5% 0%, 95% 0%, 95% 75%, 50% 100%, 5% 75%, 5% 25%);
+}
+
 @layer base {
   * {
     @apply border-border;
