--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Enigma";
+  src: url("/Enigma.otf") format("opentype");
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
