--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -65,7 +65,13 @@
 }
 
 .hex4 {
-  clip-path: polygon(5% 0%, 95% 0%, 95% 75%, 50% 100%, 5% 75%, 5% 25%);
+  clip-path: polygon(10% 0, 90% 0, 90% 74%, 81% 91%, 10% 91%, 10% 50%);
+  
+}
+
+/* Add this CSS to your stylesheet */
+.grid-container .grid-item {
+  border-top: 1px solid #ccc;
 }
 
 @layer base {
