--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -99,7 +99,7 @@
 
 
 .gradient-text {
-  background: linear-gradient(to right, #FF2D00, #fa6262, #f1f1f1);
+  background: linear-gradient(to right, #FF2d00, #ff3b00, #f1f1f1);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
@@ -113,7 +113,7 @@
   --slide-size: 100%;
 }
 .embla__viewport {
-  overflow: hidden;
+
 }
 .embla__container {
   display: flex;
@@ -153,7 +153,7 @@
   height: 3.6rem;
   z-index: 1;
   border-radius: 50%;
-  color: #ff2d00;
+  color: #ff3b00;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -200,6 +200,40 @@
   content: '';
 }
 .embla__dot--selected:after {
-  box-shadow: inset 0 0 0 0.1rem #ff2d00;
+  box-shadow: inset 0 0 0 0.1rem #ff3b00;
 }
 
+.polygon{
+  width: 600px;
+  height: 500px;
+  position: relative;
+  clip-path: polygon(13% 0, 100% 0, 100% 91%, 87% 100%, 0 100%, 0 9%);
+  background: #FF3B00;
+}
+
+.overlay{
+  width: 600px;
+  height: 500px;
+  position: absolute;
+  top : -15px;
+  left: -15px;
+  clip-path: polygon(13% 0, 100% 0, 100% 91%, 87% 100%, 0 100%, 0 9%);
+  background: #252525;
+}
+
+@media (max-width: 600px) {
+  .polygon{
+    width: 250px;
+    height: 200px;
+  }
+  .overlay{
+    width: 250px;
+    height: 200px;
+    top: -10px;
+    left: -10px;
+  }
+}
+
+.smh-object{
+  overflow-clip-margin: 0px;
+}
