--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,12 +5,35 @@
 @import url("../../public/assets/navbar/css/component1.css");
 @import url("../../public/assets/navbar/css/demo.css");
 @import url("../../public/assets/navbar/css/normalize.css");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap");
 
 @font-face {
   font-family: "Enigma";
   src: url("/Enigma.otf") format("opentype");
 }
-
+@font-face {
+  font-family: "Space Grotesk";
+  src: url("/Space Grotesk.ttf") format("truetype");
+}
+.content-post img {
+  max-width: 60%;
+  max-height: 60vh;
+  width: auto;
+  height: auto;
+  margin: 20px auto;
+  object-fit: contain;
+}
+.space-grotesk {
+  font-family: "Space Grotesk", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.roboto-regular {
+  font-family: "Roboto", serif;
+  font-weight: 400;
+  font-style: normal;
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -76,7 +99,6 @@
   border-top: 2px solid #ccc;
 }
 
-
 @layer base {
   * {
     @apply border-border;
@@ -86,7 +108,6 @@
     @apply bg-background text-foreground;
   }
 }
-
 
 .card {
   height: 340px;
@@ -257,4 +278,3 @@
   background-color: white;
   border-radius: 50%;
 }
-
