--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -318,3 +318,38 @@ html{
     opacity: 0;
   }
 }
+
+
+
+canvas {
+  @apply block;
+}
+
+#imageContainer {
+  @apply relative w-full h-full overflow-hidden flex justify-center items-center  max-w-full filter transition-all ease-in duration-500;
+  @apply saturate-0;
+}
+
+#imageContainer:hover {
+  @apply saturate-100;
+}
+
+#imageContainer > * {
+  
+  @apply absolute inset-0 w-full h-full object-cover;
+}
+
+.jux-linx {
+  @apply flex flex-row items-center flex-wrap justify-start gap-2 absolute left-5 bottom-5;
+}
+a {
+  @apply no-underline text-inherit font-normal text-base border border-solid border-white/30 px-2 py-1 rounded-sm bg-black transition-all ease-in duration-100;
+}
+
+a:nth-child(1):hover {
+  @apply border-white/40 shadow-[0_2px_0_#349eff];
+}
+
+a:nth-child(2):hover {
+  @apply border-white/40 shadow-[0_2px_0_#ff5757];
+}
