--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -350,7 +350,10 @@ html {
 
 canvas {
   @apply block;
+  width: 100%;
+  height: 100%;
 }
+
 
 #imageContainer {
   @apply relative w-full h-full overflow-hidden flex justify-center items-center  max-w-full filter transition-all ease-in duration-500;
@@ -368,3 +371,4 @@ canvas {
 .jux-linx {
   @apply flex flex-row items-center flex-wrap justify-start gap-2 absolute left-5 bottom-5;
 }
+
