--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -284,7 +284,6 @@ html {
   height: 20px;
   background-color: white;
   border-radius: 50%;
-  
 }
 
 .ripple-container {
@@ -303,7 +302,7 @@ html {
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  border: 1px solid #9e0404;
+  border: 1px solid #ff3b00;
   transform: translate(-50%, -50%);
 }
 
@@ -333,7 +332,7 @@ html {
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  border: 1px solid #9e0404;
+  border: 1px solid #ff2d00;
   transform: translate(-50%, -50%);
 }
 
@@ -354,7 +353,6 @@ canvas {
   height: 100%;
 }
 
-
 #imageContainer {
   @apply relative w-full h-full overflow-hidden flex justify-center items-center  max-w-full filter transition-all ease-in duration-500;
   @apply saturate-0;
@@ -371,4 +369,3 @@ canvas {
 .jux-linx {
   @apply flex flex-row items-center flex-wrap justify-start gap-2 absolute left-5 bottom-5;
 }
-
