--- a/public/assets/navbar/css/navbar.css
+++ b/public/assets/navbar/css/navbar.css
@@ -78,12 +78,12 @@
   margin-left: 18px;
 }
 
-.csstransforms .cn-wrapper li:nth-child(5) img{
+.csstransforms .cn-wrapper li:nth-child(5) img {
   margin-right: 18px;
 }
 
 .cn-button {
-  border: none;
+  /* border: none;
   background: none;
   color: white;
   padding-bottom: 1em;
@@ -105,7 +105,34 @@
   border: 1px solid white;
   align-items: center;
   display: flex;
+  justify-content: center; */
+
+  border: none;
+  background: none;
+  color: white;
+  /* padding-bottom: 1em; */
+  /* height: 2.2em; */
+  /* width: 4.5em; */
+  background-color: black;
+  position: fixed;
+  left: 50%;
+  margin-left: -2.25em;
+  /* top: 50%; */
+  z-index: 13;
+  margin-top: -2.25em;
+  border-radius: 50px 50px 0px 0px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  cursor: pointer;
+  border: 1px solid white;
+  /* align-items: center; */
+  display: flex;
   justify-content: center;
+  /* transform: translate(-50%, -50%); */
+  bottom: -1px;
+  
 }
 
 .cn-button .menu-icon {
@@ -190,9 +217,9 @@
 .csstransforms .cn-wrapper li a:hover,
 .csstransforms .cn-wrapper li a:active,
 .csstransforms .cn-wrapper li a:focus {
-  background: -webkit-radial-gradient(transparent 35%, #FF3B00 35%);
-  background: -moz-radial-gradient(transparent 35%, #FF3B00 35%);
-  background: radial-gradient(transparent 35%, #FF3B00 35%);
+  background: -webkit-radial-gradient(transparent 35%, #ff3b00 35%);
+  background: -moz-radial-gradient(transparent 35%, #ff3b00 35%);
+  background: radial-gradient(transparent 35%, #ff3b00 35%);
   scale: 1.1;
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -252,20 +279,20 @@
 
 @media only screen and (max-width: 500px) {
   .no-ccstransforms .cn-wrapper {
-    padding: .5em;
+    padding: 0.5em;
   }
 
   .no-csstransforms .cn-wrapper li {
     width: 4em;
     height: 4em;
-    font-size: .9em;
+    font-size: 0.9em;
     line-height: 4em;
   }
 }
 
 @media only screen and (max-width: 480px) {
   .csstransforms .cn-wrapper {
-    font-size: .68em;
+    font-size: 0.68em;
   }
 
   .cn-button {
